# MeshCore

./: .gitignore  CMakeLists.txt  README.version_modifiee.md  platformio.ini  sdkconfig.Heltec_v3_companion_radio_ble_idf  sdkconfig.defaults.heltec_v3_companion_radio_ble_idf  sdkconfig.heltec_v3_companion_radio_ble_idf  sdkconfig.heltec_v4_companion_radio_ble_idf  sitemap.xml
boards/: heltec_v4.json
docs/: cli_commands.md  payloads.md
docs/integrations/: mqtt_tracker_nodered_hybrid.md  node_red_meshcore_tracker_flow.json
examples/companion_radio/: BridgeAdapter.cpp  BridgeAdapter.h  MyMesh.cpp  MyMesh.h  NodePrefs.h  main.cpp
examples/companion_radio/ui-new/: UITask.cpp
examples/simple_repeater/: MyMesh.cpp  MyMesh.h  main.cpp
examples/simple_repeater_companion_api/: MyMesh.cpp  MyMesh.h  main.cpp
examples/simple_room_server/: MyMesh.cpp  MyMesh.h
examples/simple_tracker/: README.md  TrackerCLI.cpp  TrackerMesh.cpp  TrackerMesh.h  main.cpp  tracker_config.h  tracker_peripherals.cpp  tracker_peripherals.h
src/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  Mesh.cpp  Mesh.h  MeshCore.h
src/helpers/: BaseChatMesh.cpp  BoundedQueue.h  CommonCLI.cpp  CommonCLI.h  ESP32Board.cpp  ESP32Board.h  ESP32OTA.cpp  ESP32OTA.h  NRF52Board.cpp  NRF52Board.h  RP2040OTA.cpp  RP2040OTA.h  RefCountedDigitalPin.h  SimpleMeshTables.h  StaticPoolPacketManager.h
src/helpers/bridges/: ESPNowBridge.cpp  ESPNowBridge.h  MQTTBridge.cpp
src/helpers/esp32/: SerialBLEInterface.cpp  SerialBLEInterface.h
src/helpers/radiolib/: RadioLibWrappers.cpp  RadioLibWrappers.h
src/helpers/sensors/: EnvironmentSensorManager.cpp  EnvironmentSensorManager.h  LocationProvider.h  MicroNMEALocationProvider.h
src/helpers/ui/: SH1106Display.cpp  SSD1306Display.cpp
test/test_bounded_queue/: test_bounded_queue.cpp
tools/: mc_proxy_core.py  mqtt_tracker_bridge.py  requirements-mqtt-tracker.txt
tools/serial_proxy/: serial_proxy.py
tools/tcp_proxy/: tcp_proxy.py
tools/telegram_bot/: meshcore_mqtt_telegram.example.json  meshcore_mqtt_telegram.py  requirements.txt
tools/web_ota_android/: .gitignore  AndroidManifest.xml  README.md  build.ps1
tools/web_ota_android/res/drawable/: ic_launcher.xml
tools/web_ota_android/res/values/: styles.xml
tools/web_ota_android/src/dev/meshcore/ota/android/: MainActivity.java
tools/web_ota_otg/: .gitignore  README.md  app.js  go.mod  index.html  main.go  versioninfo.json
variants/heltec_t190/: platformio.ini
variants/heltec_tracker/: platformio.ini  target.cpp
variants/heltec_v3/: HeltecV3Board.h  max_app_8MB.csv  platformio.ini  sdkconfig.defaults.heltec_v3_companion_radio_ble_idf
variants/heltec_v4/: HeltecV4Board.cpp  HeltecV4Board.h  platformio.ini  sdkconfig.defaults.heltec_v4_companion_radio_ble_idf  target.cpp
variants/lilygo_t3s3/: platformio.ini
variants/lilygo_tbeam_SX1262/: platformio.ini
variants/lilygo_tbeam_SX1276/: platformio.ini
variants/lilygo_tbeam_supreme_SX1262/: platformio.ini
variants/rak11310/: RAK11310Board.cpp  RAK11310Board.h
variants/rpi_picow/: PicoWBoard.cpp  PicoWBoard.h
variants/station_g2/: platformio.ini
variants/t1000-e/: T1000eBoard.h  platformio.ini  t1000e_sensors.cpp  target.cpp
variants/thinknode_m3/: ThinkNodeM3Board.h  platformio.ini  variant.cpp  variant.h
variants/waveshare_rp2040_lora/: WaveshareBoard.cpp  WaveshareBoard.h  platformio.ini  target.cpp  target.h  uart_bootloader.ld
variants/xiao_nrf52/: XiaoNrf52Board.h  target.cpp  target.h
variants/xiao_rp2040/: XiaoRP2040Board.cpp  XiaoRP2040Board.h
variants/xiao_s3_wio/: platformio.ini
